feat: one-command setup with auto-detection
- Auto-detect Team ID from Xcode/keychain
- Auto-generate unique bundle IDs
- Auto-install dependencies (tidevice, Flask)
- Consolidate into single start.sh (setup + start + stop)
- Fix dashboard touch events (long-press, wheel scroll, debouncing)
- Smart connection: USB first, Wi-Fi fallback

Before: 11 steps, 30min | After: 1 command, 5min

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,47 @@
 # Python
 __pycache__/
 *.py[cod]
-*.pyo
-.venv/
+*$py.class
+*.so
+.Python
 venv/
-*.egg-info/
+ENV/
 
 # macOS
 .DS_Store
+.AppleDouble
+.LSOverride
+
+# Xcode
+*.xcodeproj/*
+!*.xcodeproj/project.pbxproj
+!*.xcodeproj/xcshareddata/
+DerivedData/
+*.xcworkspace
+!default.xcworkspace
+xcuserdata/
+*.moved-aside
+*.hmap
+*.ipa
+*.dSYM.zip
+*.dSYM
+
+# UDITA runtime
+.bridge.pid
+.relay.pid
+.setup_done
+.wda.pid
+*.log
+nohup.out
 
 # IDE
+.vscode/
 .idea/
 *.swp
 *.swo
+*~
+
+# Temporary
+*.tmp
+*.bak
+.cache/
