feat: add WDA validation, port checks, IP caching, and enhanced diagnostics
- Auto-detect and free occupied ports (8100, 5050)
- Verify WDA connection with retry logic and progress indicators
- Cache last working IP for fast reconnection
- Multi-method connection: cached IP → USB → Wi-Fi (fast/full scan)
- Comprehensive diagnostics when WDA fails to connect
- Enhanced status command with detailed component checks
- Separate log files for WDA, bridge, and USB relay
- Better error messages with step-by-step troubleshooting
- Post-build and post-start instructions in script output

--- a/.gitignore
+++ b/.gitignore
@@ -30,9 +30,14 @@ xcuserdata/
 # UDITA runtime
 .setup_done
 .team_id_found
+.wda_host
 *.log
 *.pid
 nohup.out
+wda.log
+bridge.log
+tidevice.log
+iproxy.log
 
 # IDE
 .vscode/
